--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
                 <a href="https://instagram.com/aakarshsharma27"><i class='bx bxl-instagram' ></i></a>
             </div>
 
-            <a href="Aakarsh_Sharma_CV.pdf" class="btn">Download CV</a>
+            <a href="Resume_Aakarsh.pdf" class="btn">Download CV</a>
         </div>
     </section>
 </body>
